Switch Project Config to openJDK 15